--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,33 +37,7 @@
     <![endif]-->
   </head>
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%= link_to 'PhotoApp', root_path, class: 'navbar-brand' %>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-right col-md-4">
-            <% if current_user %>
-              <li class="col-md-8 user-name">
-                <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe, edit_user_registration_path, title: 'Edit Profile' %>
-              </li>
-              <li class="col-md-1">&nbsp;</li>
-              <li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path, class: 'btn btn-xs btn-danger', title: 'Logout', method: :delete) %></li>
-            <% else %>
-              <li class='col-md-4 pull-right'>
-                <%= link_to('Sign in', new_user_session_path, class: 'btn btn-primary', title: 'Sign in') %>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    </div>
-
+    <%= render 'layouts/navbar' %>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
