--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon', skip_pipeline: true %>
     <%= javascript_include_tag "https://js.stripe.com/v3/" %>
     <%= javascript_include_tag "application" %>
-
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js" type="text/javascript"></script>
